--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
-    "develop": "cross-env NODE_ENV=development node src/server/server.js",
+    "dev": "cross-env NODE_ENV=development node src/server/server.js",
     "start": "cross-env NODE_ENV=production node src/server/server.js"
   },
   "dependencies": {
@@ -14,7 +14,9 @@
     "shortid": "^2.2.14",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
-    "throttle-debounce": "^2.1.0"
+    "throttle-debounce": "^2.1.0",
+    "webpack": "^4.30.0",
+    "webpack-dev-middleware": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
@@ -25,8 +27,6 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.6.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "webpack-cli": "^3.3.0",
-    "webpack": "^4.30.0",
-    "webpack-dev-middleware": "^3.6.2"
+    "webpack-cli": "^3.3.0"
   }
 }
